ELPA4-287: correct validation process